tests/tabinhighlight.svx
; pos=fail warn=0 error=1
*fix	1	reference	0	0	0	bad	tab
